New Action causes crash when duplicating bone #58928

Closed
opened 2018-12-07 13:20:51 +01:00 by Terrell · 5 comments

System Information
Operating system: Windows 10 64-bit
Graphics card: Geforce GTX 1080

Blender Version
Broken: 2.80 beta, 606223f6a61, blender2.8, 2018-12-07
Worked: 2.79b

Short description of error
When creating a simple script, trying to open or access a generated animation Action causes Blender to crash if you duplicate a bone from Edit Mode in the same script.
Trying to open this new action in the Action Editor immediately crashes Blender.

This small script replicates the crash:

import bpy

bpy.ops.armature.duplicate()
bpy.data.actions.new("Action")

Exact steps for others to reproduce the error
blender_bug.blend

Run the script in Edit Mode.
Then try to browse to the new Action in the Action Editor.

**System Information** Operating system: Windows 10 64-bit Graphics card: Geforce GTX 1080 **Blender Version** Broken: 2.80 beta, 606223f6a61, blender2.8, 2018-12-07 Worked: 2.79b **Short description of error** When creating a simple script, trying to open or access a generated animation Action causes Blender to crash if you duplicate a bone from Edit Mode in the same script. Trying to open this new action in the Action Editor immediately crashes Blender. This small script replicates the crash: ``` import bpy bpy.ops.armature.duplicate() bpy.data.actions.new("Action") ``` **Exact steps for others to reproduce the error** [blender_bug.blend](https://archive.blender.org/developer/F5869755/blender_bug.blend) Run the script in Edit Mode. Then try to browse to the new Action in the Action Editor.
Author

Added subscriber: @GameDragon

Added subscriber: @GameDragon
Member

Added subscribers: @Sergey, @lichtwerk

Added subscribers: @Sergey, @lichtwerk
Sergey Sharybin was assigned by Philipp Oeser 2018-12-10 10:07:07 +01:00
Member

Confirmed.

Asserts here
BLI_assert(pchan_index < MEM_allocN_len(pose->chan_array) / sizeof(bPoseChannel *));

1  raise							0x7ffff466a53f 
2  abort							0x7ffff4654895 
3  pose_pchan_get_indexed					armature_update.c 583 0x29c0f70      
4  BKE_pose_eval_bone						armature_update.c 644 0x29c0f70      
5  std::__invoke_impl<void, void ( *&)(Depsgraph *, Scene *, Object *, int), Depsgraph *, Scene *&, Object *&, int&>	invoke.h          60  0x2f383e7      
6  std::__invoke<void ( *&)(Depsgraph *, Scene *, Object *, int), Depsgraph *, Scene *&, Object *&, int&>                                                                                                                        invoke.h          95  0x2f38106      
7  std::_Bind<void ( *(std::_Placeholder<1>, Scene *, Object *, int))(Depsgraph *, Scene *, Object *, int)>::__call<void, Depsgraph *&&, 0ul, 1ul, 2ul, 3ul>(std::tuple<Depsgraph *&&>&&, std::_Index_tuple<0ul, 1ul, 2ul, 3ul>) functional        400 0x2f37dd6      
8  std::_Bind<void ( *(std::_Placeholder<1>, Scene *, Object *, int))(Depsgraph *, Scene *, Object *, int)>::operator()<Depsgraph *, void>(Depsgraph *&&) 	functional        484 0x2f3796f      
9  std::_Function_handler<void (Depsgraph *), std::_Bind<void ( *(std::_Placeholder<1>, Scene *, Object *, int))(Depsgraph *, Scene *, Object *, int)>>::_M_invoke(std::_Any_data const&, Depsgraph *&&) 	std_function.h    297 0x2f374a7      
10 std::function<void (Depsgraph *)>::operator()(Depsgraph *) const		std_function.h    687 0x2f456af      
11 DEG::deg_task_run_func							deg_eval.cc       95  0x2f44d61

Maybe @Sergey could check on this one?

Confirmed. Asserts here `BLI_assert(pchan_index < MEM_allocN_len(pose->chan_array) / sizeof(bPoseChannel *));` ``` 1 raise 0x7ffff466a53f 2 abort 0x7ffff4654895 3 pose_pchan_get_indexed armature_update.c 583 0x29c0f70 4 BKE_pose_eval_bone armature_update.c 644 0x29c0f70 5 std::__invoke_impl<void, void ( *&)(Depsgraph *, Scene *, Object *, int), Depsgraph *, Scene *&, Object *&, int&> invoke.h 60 0x2f383e7 6 std::__invoke<void ( *&)(Depsgraph *, Scene *, Object *, int), Depsgraph *, Scene *&, Object *&, int&> invoke.h 95 0x2f38106 7 std::_Bind<void ( *(std::_Placeholder<1>, Scene *, Object *, int))(Depsgraph *, Scene *, Object *, int)>::__call<void, Depsgraph *&&, 0ul, 1ul, 2ul, 3ul>(std::tuple<Depsgraph *&&>&&, std::_Index_tuple<0ul, 1ul, 2ul, 3ul>) functional 400 0x2f37dd6 8 std::_Bind<void ( *(std::_Placeholder<1>, Scene *, Object *, int))(Depsgraph *, Scene *, Object *, int)>::operator()<Depsgraph *, void>(Depsgraph *&&) functional 484 0x2f3796f 9 std::_Function_handler<void (Depsgraph *), std::_Bind<void ( *(std::_Placeholder<1>, Scene *, Object *, int))(Depsgraph *, Scene *, Object *, int)>>::_M_invoke(std::_Any_data const&, Depsgraph *&&) std_function.h 297 0x2f374a7 10 std::function<void (Depsgraph *)>::operator()(Depsgraph *) const std_function.h 687 0x2f456af 11 DEG::deg_task_run_func deg_eval.cc 95 0x2f44d61 ``` Maybe @Sergey could check on this one?

This issue was referenced by blender/blender@9fa408f51b

This issue was referenced by blender/blender@9fa408f51b70169d4e1ecf0801a3b9f726a9530b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#58928
No description provided.